# surgical-video-finder

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  db.py  inline_videos.py  models.py  nokey_search.py  nokey_vimeo.py  pubmed_search.py  search.py  server.py  video_cache.py  video_links.py  vimeo_search.py  youtube_search.py
app/i18n/: en.json  ro.json
app/static/css/: style.css
app/static/js/: app.js
app/templates/: index.html
data/: curated_ro_overrides.csv
docs/: ARCHITECTURE.md  DATA_SOURCES.md  GETTING_STARTED.md  I18N.md  VIDEO_SOURCES.md
scripts/: backfill_nlm_specialties.py  build_all.py  build_search_index.py  build_semantic_index.py  common.py  download_sources.py  enrich_metadata.py  import_curated.py  import_icd10am_ro.py  import_icd10cm.py  import_icd10pcs.py  seed_video_sources.py  translate_curated_ro.py  validate_db.py
tests/: test_api.py  test_nokey_search.py  test_nokey_vimeo.py  test_pubmed_search.py  test_search.py  test_vimeo_search.py  test_youtube_search.py
